# MNIST_MLOps-2

./: Makefile  README.md  conf_train_model.py  config_train.yaml  data.dvc  pyproject.toml  trainer.dockerfile
.dvc/: config
.github/workflows/: tests.yml
MNIST_MLOps/: __init__.py
MNIST_MLOps-2/: __init__.py
data/: make_data.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.py  train_model.py
outputs/2024-01-07/19-23-46/.hydra/: config.yaml  hydra.yaml
tests/: __init__.py  test_data.py
visualizations/: visualize.py
